--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.5",
+    "firebase": "^7.14.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
